Updated index page for my new job ; improved portfolio a bit

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,10 @@
         </nav>
         <main>
             <section>
-                <h1>Portfolio</h1>
-                    <p>These are some of the various projects I've worked on in my spare time over the years. The tables below contain information about each project, as well as download links. Links to <a href="https://github.com/jordanknapp00">my GitHub</a> are available for the major projects, while .zip downloads are available for all projects. Downloads for Java projects will include an executable .jar file.</p>
+                <h1>Portfolio (click <a href="schoolprojects.html">here</a> for school projects)</h1>
+                    <p>These are some of the various projects I've worked on in my spare time over the years. The tables below contain information about each project, as well as download links. Links to <a href="https://github.com/jordanknapp00">my GitHub</a> are available for the major projects, while .zip downloads are available for all projects. Downloads for Java projects will include an executable .jar file. C# and Delphi projects will include an .exe file.</p>
+
+                    <p>Note that this page only lists my own personal projects. During my time at UMD, I worked on over 50 school projects, going from basic programming skills all the way up to a software engineering group project that attempted to closely match how it's actually done in the industry. You can find details on some of the most interesting, useful, and challenging school projects <a href="schoolprojects.html">on this page</a>.</p>
             </section>
             <section>
                 <h2>Major Projects</h2>
@@ -166,7 +168,7 @@
                         <th>Description</th>
                         <td>A version of Dungeon Generator that features a graphical interface. The algorithm is exactly the same as the command-line version, and all the same features are available. I wrote this program in Delphi as an exercise to familiarize myself with the language and learn the Delphi GUI designer for a job.
                         <br><br>
-                        For details on how to use it, see the README for Dungen and the readme for this project itself on GitHub.
+                        For details on how to use it, see the README for Dungen and the README for this project itself on GitHub.
                         </td>
                     </tr>
                     <tr>
@@ -290,10 +292,6 @@
                         </td>
                     </tr>
                 </table>
-            </section>
-            <section>
-                <h1>School Projects</h1>
-                <p>During my time at UMD, I worked on over 50 projects, going from basic programming skills all the way up to a software engineering group project that attempted to closely match how it's actually done in the industry. I described some of the most interesting, challenging, and useful school projects <a href="schoolprojects.html">on this page</a>.</p>
             </section>
             <br><br>
         </main>
