--- a/resume.html
+++ b/resume.html
@@ -26,10 +26,10 @@
                     765-721-7779<br>
                     Use contact page to send an email
                 </p>
-                <p>You can download this resume in
+                <p><b>You can download this resume in
                         <a href="file/doc/Jordan Knapp Resume.docx">.docx</a> and
                         <a href="file/doc/Jordan Knapp Resume.pdf">.pdf</a> formats.
-                </p>
+                </b></p>
             </section>
             <section class="resume">
                 <h2>Education</h2>
