--- a/schoolprojects.html
+++ b/schoolprojects.html
@@ -21,9 +21,8 @@
         <main>
             <section>
                 <h1>School Projects</h1>
-                <p>This is a collection of the most useful/interesting/challenging school projects I've worked on. They're broken up by course. A brief description, as well as any important skills I got from each project, are listed.
-                <br><br>
-                Hosting school projects publicly on GitHub or any other site isn't allowed, so if any potential employers would like access to these projects, <a href="contact.html">send me an email</a>.</p>
+                <p>This is a collection of the most useful/interesting/challenging school projects I've worked on. They're broken up by course. A brief description, as well as any important skills I got from each project, are listed.</p>
+                <p>Hosting school projects publicly on GitHub or any other site isn't allowed, so if any potential employers would like access to these projects, <a href="contact.html">send me an email</a>.</p>
             </section>
             <section>
                 <h2>CMSC131: Object-Oriented Programming I (Fall 2018)</h2>
